--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "framer-motion": "^10.13.1",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.1",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.17",
+    "typescript": "5.1.6"
   }
 }
