--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^10.13.1",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
@@ -19,7 +21,9 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-toastify": "^9.1.3",
+    "tailwindcss": "3.3.3",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/node": "20.4.5",
